--- a/uniform_distribution.ipynb
+++ b/uniform_distribution.ipynb
@@ -26,7 +26,7 @@
       "\n",
       "$\\;\\;\\;\\;we\\;will\\;simulate\\;V\\sim V(a,b)$\n",
       "\n",
-      "$\\;\\;\\;\\;where\\;a<b$\n",
+      "$\\;\\;\\;\\;where\\;a<\\>b$\n",
       "\n",
       "$\\;\\;\\;\\;using\\;V=a+(b-a)U$"
      ]
